--- a/kaggle/CIBMTR/ensemble.ipynb
+++ b/kaggle/CIBMTR/ensemble.ipynb
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
+      "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
       "numpy 1.26.4\n",
       "pandas 2.2.3\n",
-      "polars 1.12.0\n",
-      "matplotlib 3.8.4\n",
-      "seaborn 0.13.2\n",
+      "polars 1.9.0\n",
+      "matplotlib 3.7.5\n",
+      "seaborn 0.12.2\n",
       "lifelines 0.30.0\n",
-      "sklearn 1.5.2\n",
-      "lightgbm\n",
-      "xgboost 2.1.2\n",
-      "catboost 1.2.5\n"
+      "sklearn 1.2.2\n",
+      "lightgbm 4.5.0\n",
+      "xgboost 2.0.3\n",
+      "catboost 1.2.7\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "bfccf596-b0f3-46d8-9af5-b412ef438e0d",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "4439e018-e539-4363-88ab-1fd7f121d41e",
    "metadata": {},
    "outputs": [
@@ -122,31 +122,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.483554</td>\n",
-       "      <td>0.497868</td>\n",
+       "      <td>0.496490</td>\n",
        "      <td>0.492672</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.620134</td>\n",
-       "      <td>0.632588</td>\n",
+       "      <td>0.636595</td>\n",
        "      <td>0.685708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.434267</td>\n",
-       "      <td>0.439699</td>\n",
+       "      <td>0.437683</td>\n",
        "      <td>0.449668</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.660707</td>\n",
-       "      <td>0.650732</td>\n",
+       "      <td>0.649706</td>\n",
        "      <td>0.661139</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.644397</td>\n",
-       "      <td>0.648778</td>\n",
+       "      <td>0.642495</td>\n",
        "      <td>0.664089</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -156,14 +156,14 @@
       "text/plain": [
        "        lgb1      xgb1       cb1\n",
        "ID                              \n",
-       "0   0.483554  0.497868  0.492672\n",
-       "1   0.620134  0.632588  0.685708\n",
-       "2   0.434267  0.439699  0.449668\n",
-       "3   0.660707  0.650732  0.661139\n",
-       "4   0.644397  0.648778  0.664089"
+       "0   0.483554  0.496490  0.492672\n",
+       "1   0.620134  0.636595  0.685708\n",
+       "2   0.434267  0.437683  0.449668\n",
+       "3   0.660707  0.649706  0.661139\n",
+       "4   0.644397  0.642495  0.664089"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "e04d5b1b-4f05-4f3d-b1f3-432e83ac86b0",
    "metadata": {},
    "outputs": [
@@ -217,31 +217,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-0.725706</td>\n",
-       "      <td>-0.712117</td>\n",
+       "      <td>-0.712913</td>\n",
        "      <td>-0.723394</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-0.497212</td>\n",
-       "      <td>-0.503058</td>\n",
+       "      <td>-0.498215</td>\n",
        "      <td>-0.445457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>-0.802942</td>\n",
-       "      <td>-0.803226</td>\n",
+       "      <td>-0.806927</td>\n",
        "      <td>-0.785873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>-0.444087</td>\n",
-       "      <td>-0.466340</td>\n",
+       "      <td>-0.475165</td>\n",
        "      <td>-0.468297</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>-0.488937</td>\n",
-       "      <td>-0.472672</td>\n",
+       "      <td>-0.488277</td>\n",
        "      <td>-0.462788</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -251,14 +251,14 @@
       "text/plain": [
        "        lgb2      xgb2       cb2\n",
        "ID                              \n",
-       "0  -0.725706 -0.712117 -0.723394\n",
-       "1  -0.497212 -0.503058 -0.445457\n",
-       "2  -0.802942 -0.803226 -0.785873\n",
-       "3  -0.444087 -0.466340 -0.468297\n",
-       "4  -0.488937 -0.472672 -0.462788"
+       "0  -0.725706 -0.712913 -0.723394\n",
+       "1  -0.497212 -0.498215 -0.445457\n",
+       "2  -0.802942 -0.806927 -0.785873\n",
+       "3  -0.444087 -0.475165 -0.468297\n",
+       "4  -0.488937 -0.488277 -0.462788"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,8 +306,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f0eb32ce-e52b-424f-8dc1-c5eaff4a82a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cv3 = pd.concat([\n",
+    "    pd.concat([\n",
+    "        joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['lgb3_1', 'lgb3_2', 'lgb3_3', 'lgb3_4']\n",
+    "    ], axis=1).dot([0.2, 0.2, 0.3, 0.3]),\n",
+    "    pd.concat([\n",
+    "        joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['xgb3_1', 'xgb3_2', 'xgb3_3', 'xgb3_4']\n",
+    "    ], axis=1).dot([0.2, 0.2, 0.3, 0.3]),\n",
+    "], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "23a30dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stk = pd.concat([\n",
+    "    df_kmf_cv.dot([0.4, 0.3, 0.3]).rename('kmf').rank(),\n",
+    "    df_naf_cv.dot([0.4, 0.3, 0.3]).rename('naf').rank(),\n",
+    "    df_cv3.dot([0.7, 0.3]).rename('3').rank()\n",
+    "], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8b30ab99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6811278688062948"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "score(df_train, df_stk.dot([0.05, 0.05, 0.9]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ea32ea6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -315,7 +367,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
