--- a/kaggle/CIBMTR/infer.ipynb
+++ b/kaggle/CIBMTR/infer.ipynb
@@ -156,16 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmf_train_prd = kmf_predictor(df_train).dot([0.4, 0.3, 0.3]).rename('kmf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "5b8b5e9e-25dd-420a-b3d1-3b32d134d9db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "kmf_train_prd = kmf_predictor(df_train).dot([0.4, 0.3, 0.3]).rename('kmf')\n",
     "naf_train_prd = naf_predictor(df_train).dot([0.4, 0.3, 0.3]).rename('naf')"
    ]
   },
@@ -208,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
