--- a/kaggle/CIBMTR/phase3.ipynb
+++ b/kaggle/CIBMTR/phase3.ipynb
@@ -2,7 +2,76 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "32c4f730",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting lifelines\n",
+      "  Downloading lifelines-0.30.0-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Requirement already satisfied: numpy>=1.14.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.26.4)\n",
+      "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.13.1)\n",
+      "Requirement already satisfied: pandas>=2.1 in /usr/local/lib/python3.10/dist-packages (from lifelines) (2.2.3)\n",
+      "Requirement already satisfied: matplotlib>=3.0 in /usr/local/lib/python3.10/dist-packages (from lifelines) (3.7.5)\n",
+      "Requirement already satisfied: autograd>=1.5 in /usr/local/lib/python3.10/dist-packages (from lifelines) (1.7.0)\n",
+      "Collecting autograd-gamma>=0.3 (from lifelines)\n",
+      "  Downloading autograd-gamma-0.5.0.tar.gz (4.0 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "Collecting formulaic>=0.2.2 (from lifelines)\n",
+      "  Downloading formulaic-1.1.1-py3-none-any.whl.metadata (6.9 kB)\n",
+      "Collecting interface-meta>=1.2.0 (from formulaic>=0.2.2->lifelines)\n",
+      "  Downloading interface_meta-1.3.0-py3-none-any.whl.metadata (6.7 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.2.0 in /usr/local/lib/python3.10/dist-packages (from formulaic>=0.2.2->lifelines) (4.12.2)\n",
+      "Requirement already satisfied: wrapt>=1.0 in /usr/local/lib/python3.10/dist-packages (from formulaic>=0.2.2->lifelines) (1.17.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (1.4.7)\n",
+      "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (24.2)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (11.0.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (3.2.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib>=3.0->lifelines) (2.9.0.post0)\n",
+      "Requirement already satisfied: mkl_fft in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (1.3.8)\n",
+      "Requirement already satisfied: mkl_random in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (1.2.4)\n",
+      "Requirement already satisfied: mkl_umath in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (0.1.1)\n",
+      "Requirement already satisfied: mkl in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2025.0.1)\n",
+      "Requirement already satisfied: tbb4py in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2022.0.0)\n",
+      "Requirement already satisfied: mkl-service in /usr/local/lib/python3.10/dist-packages (from numpy>=1.14.0->lifelines) (2.4.1)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=2.1->lifelines) (2025.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas>=2.1->lifelines) (2025.1)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib>=3.0->lifelines) (1.17.0)\n",
+      "Requirement already satisfied: intel-openmp>=2024 in /usr/local/lib/python3.10/dist-packages (from mkl->numpy>=1.14.0->lifelines) (2024.2.0)\n",
+      "Requirement already satisfied: tbb==2022.* in /usr/local/lib/python3.10/dist-packages (from mkl->numpy>=1.14.0->lifelines) (2022.0.0)\n",
+      "Requirement already satisfied: tcmlib==1.* in /usr/local/lib/python3.10/dist-packages (from tbb==2022.*->mkl->numpy>=1.14.0->lifelines) (1.2.0)\n",
+      "Requirement already satisfied: intel-cmplr-lib-rt in /usr/local/lib/python3.10/dist-packages (from mkl_umath->numpy>=1.14.0->lifelines) (2024.2.0)\n",
+      "Requirement already satisfied: intel-cmplr-lib-ur==2024.2.0 in /usr/local/lib/python3.10/dist-packages (from intel-openmp>=2024->mkl->numpy>=1.14.0->lifelines) (2024.2.0)\n",
+      "Downloading lifelines-0.30.0-py3-none-any.whl (349 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m349.3/349.3 kB\u001b[0m \u001b[31m8.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading formulaic-1.1.1-py3-none-any.whl (115 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m115.7/115.7 kB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading interface_meta-1.3.0-py3-none-any.whl (14 kB)\n",
+      "Building wheels for collected packages: autograd-gamma\n",
+      "  Building wheel for autograd-gamma (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "  Created wheel for autograd-gamma: filename=autograd_gamma-0.5.0-py3-none-any.whl size=4031 sha256=9474b835c30c57a248b2fd1924290658d738eca685475084e59332c4c0ed9a0f\n",
+      "  Stored in directory: /root/.cache/pip/wheels/25/cc/e0/ef2969164144c899fedb22b338f6703e2b9cf46eeebf254991\n",
+      "Successfully built autograd-gamma\n",
+      "Installing collected packages: interface-meta, formulaic, autograd-gamma, lifelines\n",
+      "Successfully installed autograd-gamma-0.5.0 formulaic-1.1.1 interface-meta-1.3.0 lifelines-0.30.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade lifelines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "b9b92a10",
    "metadata": {},
    "outputs": [
@@ -10,17 +79,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
+      "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
       "numpy 1.26.4\n",
       "pandas 2.2.3\n",
-      "polars 1.12.0\n",
-      "matplotlib 3.8.4\n",
-      "seaborn 0.13.2\n",
+      "polars 1.9.0\n",
+      "matplotlib 3.7.5\n",
+      "seaborn 0.12.2\n",
       "lifelines 0.30.0\n",
-      "sklearn 1.5.2\n",
-      "lightgbm\n",
-      "xgboost 2.1.2\n",
-      "catboost 1.2.5\n"
+      "sklearn 1.2.2\n",
+      "lightgbm 4.5.0\n",
+      "xgboost 2.0.3\n",
+      "catboost 1.2.7\n"
      ]
     }
    ],
@@ -56,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "089b6927",
    "metadata": {},
    "outputs": [],
@@ -70,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "361fb548",
    "metadata": {},
    "outputs": [
@@ -80,7 +149,7 @@
        "['model/p2.joblib']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9df6095a",
    "metadata": {},
    "outputs": [],
@@ -148,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9ddafa59",
    "metadata": {},
    "outputs": [],
@@ -181,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "4ec4f07c",
    "metadata": {},
    "outputs": [],
@@ -221,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c75ed91e",
    "metadata": {},
    "outputs": [],
@@ -231,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "1a9ec0ab",
    "metadata": {},
    "outputs": [],
@@ -248,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ae40ec34",
    "metadata": {},
    "outputs": [
@@ -258,7 +327,7 @@
        "(0.6685648419079484, 0.7657857992853526)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "c59b30ab",
    "metadata": {},
    "outputs": [
@@ -279,7 +348,7 @@
        "0.6759646058725581"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f569b1e1-e7e5-49c0-b733-7abdf1c2f310",
    "metadata": {},
    "outputs": [],
@@ -308,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "65e86301-142d-45ef-a30a-5087470896b2",
    "metadata": {},
    "outputs": [
@@ -344,14 +413,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/sun9sun9/python312/lib/python3.12/site-packages/xgboost/core.py:158: UserWarning: [01:50:49] WARNING: /workspace/src/common/error_msg.cc:58: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
+      "[15:41:33] WARNING: /workspace/src/common/error_msg.cc:58: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
       "Potential solutions:\n",
       "- Use a data structure that matches the device ordinal in the booster.\n",
       "- Set the device for booster before call to inplace_predict.\n",
       "\n",
       "This warning will only be shown once.\n",
-      "\n",
-      "  warnings.warn(smsg, UserWarning)\n"
+      "\n"
      ]
     },
     {
@@ -502,7 +570,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6674821562310559"
+       "0.6676258927213454"
       ]
      },
      "execution_count": 15,
@@ -523,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6749431694153748"
+       "0.6750887395750095"
       ]
      },
      "execution_count": 16,
@@ -545,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "b29f0467-d47e-4c5d-9e4d-dbf42048ab10",
    "metadata": {},
    "outputs": [],
@@ -555,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "95c6cfc9-e5bb-435d-b864-550f7e70bd8b",
    "metadata": {},
    "outputs": [
@@ -588,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "75e06be5-13a8-437f-a357-babbb26597a7",
    "metadata": {},
    "outputs": [
@@ -598,7 +666,7 @@
        "0.6662575818186289"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "a6926c2e-d9dc-4de3-977c-de805080b77b",
    "metadata": {},
    "outputs": [
@@ -619,7 +687,7 @@
        "0.6744258811913451"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "9f689632-6d10-43cd-a412-d69953bfc963",
    "metadata": {},
    "outputs": [],
@@ -644,17 +712,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "5e0c349f-3f0c-4c1a-a30f-caa53b5361fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6772404254003302"
+       "0.6772732931651779"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "4c448fb3-046b-4d38-81c5-e11546806605",
    "metadata": {},
    "outputs": [
@@ -722,7 +790,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -736,7 +804,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
