--- a/kaggle/CIBMTR/0.Ensemble.ipynb
+++ b/kaggle/CIBMTR/0.Ensemble.ipynb
@@ -10,17 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
+      "3.12.6 (main, Sep 30 2024, 02:19:13) [GCC 9.4.0]\n",
       "numpy 1.26.4\n",
       "pandas 2.2.3\n",
-      "polars 1.9.0\n",
-      "matplotlib 3.7.5\n",
-      "seaborn 0.12.2\n",
+      "polars 1.12.0\n",
+      "matplotlib 3.8.4\n",
+      "seaborn 0.13.2\n",
       "lifelines 0.30.0\n",
-      "sklearn 1.2.2\n",
-      "lightgbm 4.5.0\n",
-      "xgboost 2.0.3\n",
-      "catboost 1.2.7\n"
+      "sklearn 1.5.2\n",
+      "lightgbm\n",
+      "xgboost 2.1.2\n",
+      "catboost 1.2.5\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "id": "4439e018-e539-4363-88ab-1fd7f121d41e",
    "metadata": {},
    "outputs": [
@@ -107,9 +107,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>lgb1</th>\n",
-       "      <th>xgb1</th>\n",
-       "      <th>cb1</th>\n",
+       "      <th>lgb7</th>\n",
+       "      <th>xgb7</th>\n",
+       "      <th>cb7</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ID</th>\n",
@@ -121,63 +121,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.483554</td>\n",
-       "      <td>0.496490</td>\n",
-       "      <td>0.492672</td>\n",
+       "      <td>0.493604</td>\n",
+       "      <td>0.496470</td>\n",
+       "      <td>0.498945</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.620134</td>\n",
-       "      <td>0.636595</td>\n",
-       "      <td>0.685708</td>\n",
+       "      <td>0.621568</td>\n",
+       "      <td>0.629487</td>\n",
+       "      <td>0.648487</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.434267</td>\n",
-       "      <td>0.437683</td>\n",
-       "      <td>0.449668</td>\n",
+       "      <td>0.447219</td>\n",
+       "      <td>0.452650</td>\n",
+       "      <td>0.453923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.660707</td>\n",
-       "      <td>0.649706</td>\n",
-       "      <td>0.661139</td>\n",
+       "      <td>0.670165</td>\n",
+       "      <td>0.659071</td>\n",
+       "      <td>0.647647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.644397</td>\n",
-       "      <td>0.642495</td>\n",
-       "      <td>0.664089</td>\n",
+       "      <td>0.637481</td>\n",
+       "      <td>0.645079</td>\n",
+       "      <td>0.654801</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        lgb1      xgb1       cb1\n",
+       "        lgb7      xgb7       cb7\n",
        "ID                              \n",
-       "0   0.483554  0.496490  0.492672\n",
-       "1   0.620134  0.636595  0.685708\n",
-       "2   0.434267  0.437683  0.449668\n",
-       "3   0.660707  0.649706  0.661139\n",
-       "4   0.644397  0.642495  0.664089"
+       "0   0.493604  0.496470  0.498945\n",
+       "1   0.621568  0.629487  0.648487\n",
+       "2   0.447219  0.452650  0.453923\n",
+       "3   0.670165  0.659071  0.647647\n",
+       "4   0.637481  0.645079  0.654801"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_kmf_cv = pd.concat([\n",
-    "    joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['lgb1', 'xgb1', 'cb1']\n",
+    "    joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['lgb7', 'xgb7', 'cb7']\n",
     "], axis=1)\n",
     "df_kmf_cv.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "e04d5b1b-4f05-4f3d-b1f3-432e83ac86b0",
    "metadata": {},
    "outputs": [
@@ -202,9 +202,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>lgb2</th>\n",
-       "      <th>xgb2</th>\n",
-       "      <th>cb2</th>\n",
+       "      <th>lgb6</th>\n",
+       "      <th>xgb6</th>\n",
+       "      <th>cb6</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ID</th>\n",
@@ -216,63 +216,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.725706</td>\n",
-       "      <td>-0.712913</td>\n",
-       "      <td>-0.723394</td>\n",
+       "      <td>-0.727016</td>\n",
+       "      <td>-0.710788</td>\n",
+       "      <td>-0.701036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.497212</td>\n",
-       "      <td>-0.498215</td>\n",
-       "      <td>-0.445457</td>\n",
+       "      <td>-0.474285</td>\n",
+       "      <td>-0.507268</td>\n",
+       "      <td>-0.483968</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.802942</td>\n",
-       "      <td>-0.806927</td>\n",
-       "      <td>-0.785873</td>\n",
+       "      <td>-0.806291</td>\n",
+       "      <td>-0.801419</td>\n",
+       "      <td>-0.774680</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-0.444087</td>\n",
-       "      <td>-0.475165</td>\n",
-       "      <td>-0.468297</td>\n",
+       "      <td>-0.452092</td>\n",
+       "      <td>-0.460558</td>\n",
+       "      <td>-0.476675</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.488937</td>\n",
-       "      <td>-0.488277</td>\n",
-       "      <td>-0.462788</td>\n",
+       "      <td>-0.485533</td>\n",
+       "      <td>-0.487864</td>\n",
+       "      <td>-0.469562</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        lgb2      xgb2       cb2\n",
+       "        lgb6      xgb6       cb6\n",
        "ID                              \n",
-       "0  -0.725706 -0.712913 -0.723394\n",
-       "1  -0.497212 -0.498215 -0.445457\n",
-       "2  -0.802942 -0.806927 -0.785873\n",
-       "3  -0.444087 -0.475165 -0.468297\n",
-       "4  -0.488937 -0.488277 -0.462788"
+       "0  -0.727016 -0.710788 -0.701036\n",
+       "1  -0.474285 -0.507268 -0.483968\n",
+       "2  -0.806291 -0.801419 -0.774680\n",
+       "3  -0.452092 -0.460558 -0.476675\n",
+       "4  -0.485533 -0.487864 -0.469562"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_naf_cv = pd.concat([\n",
-    "    joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['lgb2', 'xgb2', 'cb2']\n",
+    "    joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['lgb6', 'xgb6', 'cb6']\n",
     "], axis=1)\n",
     "df_naf_cv.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "b0fccb0e-5d99-4526-8e9f-edbd73040af6",
    "metadata": {},
    "outputs": [],
@@ -285,17 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "id": "71e48c7a-c0eb-48f4-a906-08ca434329ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6772404254003302"
+       "0.6764655470523381"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "f0eb32ce-e52b-424f-8dc1-c5eaff4a82a0",
    "metadata": {},
    "outputs": [],
@@ -323,37 +323,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "23a30dd0",
+   "execution_count": 21,
+   "id": "05e3ad71-65bd-42c6-9171-1f732e67e33c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_stk = pd.concat([\n",
-    "    df_kmf_cv.dot([0.4, 0.3, 0.3]).rename('kmf').rank(),\n",
-    "    df_naf_cv.dot([0.4, 0.3, 0.3]).rename('naf').rank(),\n",
-    "    df_cv3.dot([0.7, 0.3]).rename('3').rank()\n",
+    "df_cv4 = pd.concat([\n",
+    "    pd.concat([\n",
+    "        joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['lgb5_1', 'lgb5_2', 'lgb5_3', 'lgb5_4']\n",
+    "    ], axis=1).dot([0.2, 0.2, 0.3, 0.3]),\n",
+    "    pd.concat([\n",
+    "        joblib.load(os.path.join(model_path, '{}.cv'.format(i)))['cv_best_']['prd'].sort_index().rename(i) for i in ['xgb5_1', 'xgb5_2', 'xgb5_3', 'xgb5_4']\n",
+    "    ], axis=1).dot([0.2, 0.2, 0.3, 0.3]),\n",
     "], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
+   "id": "23a30dd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_stk = pd.concat([\n",
+    "    df_kmf_cv.dot([0.5, 0.1, 0.4]).rename('kmf').rank(),\n",
+    "    df_naf_cv.dot([0.5, 0.1, 0.4]).rename('naf').rank(),\n",
+    "    df_cv3.dot([0.8, 0.2]).rename('3').rank(),\n",
+    "    df_cv4.dot([0.8, 0.2]).rename('4').rank()\n",
+    "], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "8b30ab99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6811278688062948"
+       "0.6819552175820196"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score(df_train, df_stk.dot([0.05, 0.05, 0.9]))"
+    "score(df_train, df_stk.dot([0.00, 0.1, 0.0, 0.9]))"
    ]
   },
   {
@@ -367,7 +385,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
