--- a/kaggle/CIBMTR/3.NelsonAalen1.ipynb
+++ b/kaggle/CIBMTR/3.NelsonAalen1.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "32c4f730",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -790,7 +788,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -804,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
