--- a/kaggle/PGS5/PGS5_ep4/1-1.Data Wrangling.ipynb
+++ b/kaggle/PGS5/PGS5_ep4/1-1.Data Wrangling.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in ['data', 'result', 'model']:\n",
+    "for i in ['data', 'result', 'model', 'img']:\n",
     "    if not os.path.exists(i):\n",
     "        os.mkdir(i)"
    ]
@@ -3526,7 +3526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
